--- a/podcastrnext/src/styles/global.scss
+++ b/podcastrnext/src/styles/global.scss
@@ -14,7 +14,7 @@
         --gray-500:#808080;
         --gray-800:#494d4b;
 
-        --green-500: 04d361;
+        --green-500: #04d361;
 
         --purble-300:#9f75ff;
         --purble-400:#9164fa;
