--- a/podcastrnext/src/components/Player/styles.module.scss
+++ b/podcastrnext/src/components/Player/styles.module.scss
@@ -32,7 +32,29 @@
         }
 }
 
+.currentEpisode{
 
+    text-align: center;
+
+    img{
+        border-radius: 1.5rem;
+
+    }
+    strong{
+        display: block;
+        margin-top: 2rem;
+        font: 600 1em Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span{
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.56rem;
+    }
+
+}
 .emptyPlayer{
 
         width: 100%;
@@ -90,6 +112,22 @@
             height: 4rem;
             border-radius: 1rem;
             background: var(--purble-400);
+
+            transition: filter 0.2s;
+
+            &:hover:not(:disabled){
+                filter: brightness(0.95);
+            }
+
+        }
+
+        &:disabled{
+                cursor: not-allowed;
+        }
+
+        &:hover:not(:disabled){
+
+            filter:  brightness( 0.8);
         }
     }
     }
